# HWorkj

./: .gitignore  pyproject.toml
.gitlab/: gitlab-ci.yaml
etc/: config.py
src/pages/: google_search_page.py
task_1/src/utils/: webdriver_manager.py
task_1/tests/: conftest.py
task_2/: base.py  main.py
task_2/tests/: test_classes.py
task_3/: main.py
task_3/data/models/: animal.py
task_3/src/helpers/: api_client.py
task_3/src/services/: animal_service.py
tests/: conftest.py  test_google_search.py
